@@ -8,15 +8,19 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.enums.JudicialMessageRoleType;
+import uk.gov.hmcts.reform.fpl.enums.OrganisationalRole;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
+import uk.gov.hmcts.reform.fpl.model.common.dynamic.DynamicListElement;
 import uk.gov.hmcts.reform.fpl.model.event.MessageJudgeEventData;
 import uk.gov.hmcts.reform.fpl.model.judicialmessage.JudicialMessage;
 import uk.gov.hmcts.reform.fpl.model.judicialmessage.JudicialMessageMetaData;
 import uk.gov.hmcts.reform.fpl.service.IdentityService;
+import uk.gov.hmcts.reform.fpl.service.RoleAssignmentService;
 import uk.gov.hmcts.reform.fpl.service.UserService;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -29,12 +33,11 @@ import static uk.gov.hmcts.reform.fpl.utils.TestDataHelper.buildDynamicList;
 
 @WebMvcTest(MessageJudgeController.class)
 @OverrideAutoConfiguration(enabled = true)
-class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
+class MessageJudgeControllerAboutToSubmitTest extends MessageJudgeControllerAbstractTest {
     private static final JudicialMessageRoleType SENDER_TYPE = JudicialMessageRoleType.LOCAL_COURT_ADMIN;
     private static final JudicialMessageRoleType RECIPIENT_TYPE = JudicialMessageRoleType.OTHER;
     private static final String SENDER = "ben@fpla.com";
     private static final String MESSAGE = "Some message";
-    private static final String MESSAGE_REQUESTED_BY = "request review from some court";
     private static final String MESSAGE_RECIPIENT = "recipient@fpla.com";
     private static final UUID SELECTED_DYNAMIC_LIST_ITEM_ID = UUID.randomUUID();
 
@@ -48,8 +51,13 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
     @MockBean
     private UserService userService;
 
+    @MockBean
+    private RoleAssignmentService roleAssignmentService;
+
     @Test
     void shouldAddNewJudicialMessageAndSortIntoExistingJudicialMessageList() {
+        when(userService.getOrgRoles()).thenReturn(Set.of(OrganisationalRole.LOCAL_COURT_ADMIN));
+
         JudicialMessage oldJudicialMessage = JudicialMessage.builder()
             .updatedTime(now().minusDays(1))
             .build();
@@ -59,8 +67,12 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
             .judicialMessageNote(MESSAGE)
             .judicialMessageMetaData(JudicialMessageMetaData.builder()
                 .urgency("High urgency")
+                .recipientDynamicList(buildRecipientDynamicListNoJudges().toBuilder()
+                    .value(DynamicListElement.builder()
+                        .code(RECIPIENT_TYPE.toString())
+                        .build())
+                    .build())
                 .recipient(MESSAGE_RECIPIENT)
-                .recipientType(RECIPIENT_TYPE)
                 .sender(SENDER)
                 .senderType(SENDER_TYPE)
                 .build())
@@ -81,12 +93,14 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
             .dateSent(formatLocalDateTimeBaseUsingFormat(now(), DATE_TIME_AT))
             .updatedTime(now())
             .status(OPEN)
-            .recipient(MESSAGE_RECIPIENT)
             .recipientType(RECIPIENT_TYPE)
+            .recipient(MESSAGE_RECIPIENT)
             .latestMessage(MESSAGE)
             .sender(SENDER)
             .senderType(SENDER_TYPE)
-            .messageHistory(String.format("%s - %s", SENDER, MESSAGE))
+            .fromLabel("%s (%s)".formatted(SENDER_TYPE.getLabel(), SENDER))
+            .toLabel("%s (%s)".formatted(RECIPIENT_TYPE.getLabel(), MESSAGE_RECIPIENT))
+            .messageHistory(String.format("%s (%s) - %s", SENDER_TYPE.getLabel(), SENDER, MESSAGE))
             .urgency("High urgency")
             .build();
 
@@ -100,48 +114,46 @@ class MessageJudgeControllerAboutToSubmitTest extends AbstractCallbackTest {
     void shouldRemoveTransientFields() {
         CaseDetails caseDetails = CaseDetails.builder()
             .data(Map.ofEntries(
+                Map.entry("documentDynamicList",
+                    buildDynamicList(0, Pair.of(SELECTED_DYNAMIC_LIST_ITEM_ID, "some data"))),
+                Map.entry("documentTypesDynamicList",
+                    buildDynamicList(0, Pair.of(SELECTED_DYNAMIC_LIST_ITEM_ID, "some data"))),
                 Map.entry("hasAdditionalApplications", "some data"),
-                Map.entry("isMessageRegardingAdditionalApplications", "some data"),
-                Map.entry("additionalApplicationsDynamicList", "some data"),
+                Map.entry("isMessageRegardingDocuments", "APPLICATION"),
+                Map.entry("judicialMessageDynamicList",
+                    buildDynamicList(0, Pair.of(SELECTED_DYNAMIC_LIST_ITEM_ID, "some data"))),
                 Map.entry("relatedDocumentsLabel", "some data"),
                 Map.entry("nextHearingLabel", "some data"),
                 Map.entry("judicialMessageMetaData", JudicialMessageMetaData.builder()
-                    .recipient("some data")
+                        .recipientDynamicList(buildRecipientDynamicListNoJudges().toBuilder()
+                            .value(DynamicListElement.builder()
+                                .code(RECIPIENT_TYPE.toString())
+                                .build())
+                            .build())
                     .sender("some data")
                     .urgency("some data")
                     .build()),
                 Map.entry("judicialMessageNote", "some data"),
-                Map.entry("judicialMessageDynamicList",
-                    buildDynamicList(0, Pair.of(SELECTED_DYNAMIC_LIST_ITEM_ID, "some data"))),
-                Map.entry("judicialMessageReply", JudicialMessage.builder().build())
+                Map.entry("judicialMessageReply", JudicialMessage.builder().build()),
+                Map.entry("isSendingEmailsInCourt", "YES")
             ))
             .build();
 
         AboutToStartOrSubmitCallbackResponse response = postAboutToSubmitEvent(caseDetails);
 
         assertThat(response.getData()).doesNotContainKeys(
+            "documentDynamicList",
+            "documentTypesDynamicList",
             "hasAdditionalApplications",
-            "isMessageRegardingAdditionalApplications",
+            "isMessageRegardingDocuments",
+            "judicialMessageDynamicList",
             "additionalApplicationsDynamicList",
             "relatedDocumentsLabel",
             "nextHearingLabel",
             "judicialMessageMetaData",
             "judicialMessageNote",
-            "judicialMessageDynamicList",
-            "judicialMessageReply"
+            "judicialMessageReply",
+            "isSendingEmailsInCourt"
         );
-    }
-
-    private JudicialMessage buildJudicialMessage(String dateSent, String latestMessage) {
-        return JudicialMessage.builder()
-            .sender(SENDER)
-            .recipient(MESSAGE_RECIPIENT)
-            .updatedTime(now().minusDays(2))
-            .status(OPEN)
-            .subject(MESSAGE_REQUESTED_BY)
-            .latestMessage(latestMessage)
-            .messageHistory(String.format("%s - %s", SENDER, MESSAGE))
-            .dateSent(dateSent)
-            .build();
     }
 }
